--- a/media/profile.html
+++ b/media/profile.html
@@ -133,7 +133,7 @@
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-6 col-6">
                                 <div class="d-flex justify-content-between align-items-center experience">
-                                    <a href="{% url 'web:certificate_view' %}">
+                                    <a href="{% url 'web:pdf_certificate' %}" target="_blank">
                                         <button class="certificate" id="chatBtn"><i class="fa-solid fa-download"></i>
                                             Download Certificate</button>
                                     </a>
